--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -69,3 +69,14 @@ body, html
   padding: 5px
   font-size: 12px
   border-bottom-left-radius: 5px
+
+
+.body-lock
+  height: 100%
+  overflow: hidden
+  position: fixed
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
+  width: 100%
